test/functions/ferguson/ref-pair/const-error-iterated.good
const-error-iterated.chpl:32: error: const actual is passed to 'ref' formal 'A' of writeForA()
const-error-iterated.chpl:33: error: const actual is passed to 'ref' formal 'A' of writeForallA()
const-error-iterated.chpl:34: error: const actual is passed to 'ref' formal 'A' of promotedAssign()
const-error-iterated.chpl:35: error: const actual is passed to 'ref' formal 'A' of writeCoforallA()
